Bug 102382 - CRASH - "'NSInternalInconsistencyException', reason: 'nextEventMatchingMask should only be called from the Main Thread!'" during CppunitTests
Summary: CRASH - "'NSInternalInconsistencyException', reason: 'nextEventMatchingMask s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) macOS (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-23 09:06 UTC by Alex Thurgood
Modified: 2016-10-12 08:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Console output on build attempt with symbols (11.18 KB, text/plain)
2016-09-23 09:07 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2016-09-23 09:06:44 UTC
User-Agent:       Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:49.0) Gecko/20100101 Firefox/49.0
Build Identifier: 

Attempting to build a debug-enabled version of master on OSX leads to failure in the Chart2 cppunit test, with an ABI abort.

Reproducible: Always

Steps to Reproduce:
Build switches :
--with-ant-home=/Volumes/BUILDHD/Shared/packages/apache-ant-1.9.2
--without-junit
--enable-64-bit
--with-extra-buildid
--enable-extra-template
--enable-extra-gallery
--enable-extension-integration
--with-help
--with-lang=fr
--enable-epm
--with-package-format=dmg
--enable-ext-mariadb-connector
--with-system-mariadb
--enable-bundle-mariadb
--with-myspell-dicts
--with-doxygen=/Applications/Doxygen.app/Contents/Resources/doxygen
--disable-firebird-sdbc
--enable-dbgutil




Trace output provided in attachment


Reset User Profile?No
Comment 1 Alex Thurgood 2016-09-23 09:07:31 UTC
Created attachment 127570 [details]
Console output on build attempt with symbols
Comment 2 Stephan Bergmann 2016-09-23 09:18:35 UTC
This hits randomly, with various CppunitTests, on macOS 12.
Comment 3 Commit Notification 2016-09-23 21:25:54 UTC
Tor Lillqvist committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e44b034512551c09689edcecfa7401ecbb4af80e

tdf#102382: nextEventMatchingMask should only be called from the Main Thread

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Alex Thurgood 2016-10-12 08:44:41 UTC
That commit seemed to do the trick for me.