tdf#102382: nextEventMatchingMask should only be called from the Main Thread

So don't then unless we are on the main thread.

Change-Id: I6ba52ed7db5d73a4c1c6acf10bdf254a6f959da8